# LIVE_TRADING

./: .pre-commit-config.yaml  README.md  pyproject.toml
docker-compose/: Makefile  redpanda.yml
services/candles/: Dockerfile  Makefile  config.py  pyproject.toml  run.py  settings.env
services/technical_indicators/: Dockerfile  Makefile  README.md  candle.py  config.py  pyproject.toml  run.py  settings.env  technical_indicators.py
services/technical_indicators_pandas/: Makefile  candle.py  config.py  dockerfile  pyproject.toml  settings.env  technical_indicators.py
services/to_feature_store/: Dockerfile  Makefile  README.md  config.py  pyproject.toml  run.py  settings.env  sinks.py
services/trades/: Dockerfile  Makefile  config.py  historical.settings.env  live.settings.env  multistage.Dockerfile  naive.Dockerfile  pyproject.toml  run.py  settings.env
services/trades/kraken_api/: base.py  mock.py  rest.py  trade.py  websocket.py
