[project]
name = "technical-indicators-pandas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "pandas-ta>=0.3.14b0",
    "pydantic-settings>=2.6.1",
    "quixstreams>=3.5.0",
    "numpy==1.24.4",  # Fix numpy version
    "setuptools>=65.0.0",
]
